--- a/packages/create-electron/playground/react-ts/electron-builder.yml
+++ b/packages/create-electron/playground/react-ts/electron-builder.yml
@@ -6,8 +6,7 @@ files:
   - '!**/.vscode/*'
   - '!**/src/*'
   - '!**/electron.vite.config.{js,ts,mjs,cjs}'
-  - >-
-    !**/{.eslintignore,.eslintrc.js,.prettierignore,.prettierrc.yaml,electron.vite.config.ts,dev-app-update.yml,CHANGELOG.md,README.md}
+  - '!**/{.eslintignore,.eslintrc.js,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
 asarUnpack:
   - '**/*.{node,dll}'
 afterSign: build/notarize.js
