--- a/packages/create-electron/playground/react-ts/tsconfig.web.json
+++ b/packages/create-electron/playground/react-ts/tsconfig.web.json
@@ -8,6 +8,12 @@
   ],
   "compilerOptions": {
     "composite": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@renderer/*": [
+        "src/renderer/src/*"
+      ]
+    }
   }
 }
