--- a/packages/create-docs/package.json
+++ b/packages/create-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quick-start/create-docs",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "description": "An easy way to generate a static site",
   "main": "index.js",
   "bin": {
