--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -20,6 +20,7 @@ body:
       description: Select the used Scaffolding
       options:
         - create-electron
+        - create-docs
     validations:
       required: true
   - type: textarea
