--- a/packages/create-docs/playground/docs/package.json
+++ b/packages/create-docs/playground/docs/package.json
@@ -14,7 +14,7 @@
     "vue": "^3.2.33"
   },
   "devDependencies": {
-    "vitepress": "^0.22.4"
+    "vitepress": "1.0.0-alpha.4"
   },
   "pnpm": {
     "peerDependencyRules": {
