--- a/packages/create-docs/template/docs-ts/package.json
+++ b/packages/create-docs/template/docs-ts/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
-    "vitepress": "^0.22.4"
+    "vitepress": "1.0.0-alpha.4"
   },
   "pnpm": {
     "peerDependencyRules": {
