refactor(create-electron): sample template renamed to vanilla

--- a/packages/create-electron/playground/vanilla-ts/package.json
+++ b/packages/create-electron/playground/vanilla-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-ts",
+  "name": "vanilla-ts",
   "version": "1.0.0",
   "description": "A minimal Electron application with TypeScript",
   "main": "./out/main/index.js",
