--- a/packages/create-electron/playground/vanilla-ts/electron-builder.yml
+++ b/packages/create-electron/playground/vanilla-ts/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.electron.app
-productName: sample-ts
+productName: vanilla-ts
 directories:
   buildResources: build
 files:
@@ -11,7 +11,7 @@ asarUnpack:
   - '**/*.{node,dll}'
 afterSign: build/notarize.js
 win:
-  executableName: sample-ts
+  executableName: vanilla-ts
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
