--- a/packages/create-electron/playground/vanilla/package.json
+++ b/packages/create-electron/playground/vanilla/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample",
+  "name": "vanilla",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "./src/main.js",
