--- a/packages/create-electron/template/vanilla/electron-builder.yml
+++ b/packages/create-electron/template/vanilla/electron-builder.yml
@@ -29,6 +29,7 @@ linux:
     - AppImage
     - snap
     - deb
+  maintainer: electronjs.org
   category: Utility
 appImage:
   artifactName: ${name}-${version}.${ext}
