--- a/packages/create-electron/template/vanilla-ts/package.json
+++ b/packages/create-electron/template/vanilla-ts/package.json
@@ -4,6 +4,7 @@
   "description": "A minimal Electron application with TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
+  "homepage": "https://www.electronjs.org",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
