--- a/packages/create-electron/playground/react/electron-builder.yml
+++ b/packages/create-electron/playground/react/electron-builder.yml
@@ -29,8 +29,8 @@ dmg:
 linux:
   target:
     - AppImage
-    - snap
     - deb
+  maintainer: electronjs.org
   category: Utility
 appImage:
   artifactName: ${name}-${version}.${ext}
