--- a/packages/create-electron/playground/vue/package.json
+++ b/packages/create-electron/playground/vue/package.json
@@ -4,6 +4,7 @@
   "description": "An Electron application with Vue",
   "main": "./out/main/index.js",
   "author": "example.com",
+  "homepage": "https://www.electronjs.org",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -16,22 +17,22 @@
     "build:linux": "npm run build && electron-builder --linux --config"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^1.0.1",
+    "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.1",
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "electron": "^17.3.1",
+    "electron": "^19.0.14",
     "electron-builder": "^22.14.13",
     "electron-notarize": "^1.2.1",
-    "electron-vite": "^1.0.2",
-    "eslint": "^8.12.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "less": "^4.1.2",
-    "prettier": "^2.6.1",
-    "vite": "^2.9.1",
-    "vue": "^3.2.31"
+    "electron-vite": "^1.0.6",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.4.0",
+    "less": "^4.1.3",
+    "prettier": "^2.7.1",
+    "vite": "^3.0.9",
+    "vue": "^3.2.37"
   }
 }
