--- a/packages/create-electron/template/vanilla/electron-builder.yml
+++ b/packages/create-electron/template/vanilla/electron-builder.yml
@@ -4,7 +4,7 @@ directories:
   buildResources: build
 files:
   - '!**/.vscode/*'
-  - '!**/{.eslintignore,.eslintrc.js,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
+  - '!{.eslintignore,.eslintrc.js,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
 asarUnpack:
   - '**/*.{node,dll}'
 afterSign: build/notarize.js
