--- a/packages/create-electron/template/vue-ts/electron-builder.yml
+++ b/packages/create-electron/template/vue-ts/electron-builder.yml
@@ -4,9 +4,10 @@ directories:
   buildResources: build
 files:
   - '!**/.vscode/*'
-  - '!**/src/*'
-  - '!**/electron.vite.config.{js,ts,mjs,cjs}'
-  - '!**/{.eslintignore,.eslintrc.js,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
+  - '!src/*'
+  - '!electron.vite.config.{js,ts,mjs,cjs}'
+  - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
+  - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
   - '**/*.{node,dll}'
 afterSign: build/notarize.js
