chore: add create-node-lib option for issue template

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -21,6 +21,7 @@ body:
       options:
         - create-electron
         - create-docs
+        - create-node-lib
     validations:
       required: true
   - type: textarea
