--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -22,6 +22,7 @@ body:
       options:
         - create-electron
         - create-docs
+        - create-node-lib
     validations:
       required: true
   - type: dropdown
