--- a/packages/create-electron/playground/vue-ts/package.json
+++ b/packages/create-electron/playground/vue-ts/package.json
@@ -7,11 +7,13 @@
   "homepage": "https://www.electronjs.org",
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
+    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
+    "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
+    "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "build": "tsc --noEmit && electron-vite build",
+    "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build && electron-builder --win --config",
     "build:mac": "npm run build && electron-builder --mac --config",
@@ -23,21 +25,22 @@
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@rushstack/eslint-patch": "^1.1.4",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "16.11.22",
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue": "^3.1.2",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "electron": "^19.0.14",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "electron": "^20.3.1",
     "electron-builder": "^22.14.13",
     "electron-notarize": "^1.2.1",
-    "electron-vite": "^1.0.8",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.4.0",
+    "electron-vite": "^1.0.10",
+    "eslint": "^8.24.0",
+    "eslint-plugin-vue": "^9.6.0",
     "less": "^4.1.3",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.9",
-    "vue": "^3.2.37"
+    "vite": "^3.1.6",
+    "vue": "^3.2.40",
+    "vue-tsc": "^0.40.13"
   }
 }
