chore(create-electron): update playground

--- a/packages/create-electron/playground/svelte/electron-builder.yml
+++ b/packages/create-electron/playground/svelte/electron-builder.yml
@@ -8,7 +8,7 @@ files:
   - '!electron.vite.config.{js,ts,mjs,cjs}'
   - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
 asarUnpack:
-  - '**/*.{node,dll}'
+  - resources/*
 afterSign: build/notarize.js
 win:
   executableName: svelte
