--- a/packages/create-electron/playground/vanilla-ts/electron-builder.yml
+++ b/packages/create-electron/playground/vanilla-ts/electron-builder.yml
@@ -9,7 +9,7 @@ files:
   - '!{.eslintignore,.eslintrc.js,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
-  - '**/*.{node,dll}'
+  - resources/*
 afterSign: build/notarize.js
 win:
   executableName: vanilla-ts
