--- a/packages/create-electron/playground/svelte/electron-builder.yml
+++ b/packages/create-electron/playground/svelte/electron-builder.yml
@@ -7,6 +7,7 @@ files:
   - '!src/*'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
   - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
+  - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
 asarUnpack:
   - resources/*
 afterSign: build/notarize.js
