edit electron-builder.yml to add all files in resources to unpack

--- a/packages/create-electron/playground/react-ts/electron-builder.yml
+++ b/packages/create-electron/playground/react-ts/electron-builder.yml
@@ -10,7 +10,7 @@ files:
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
-  - resources/*
+  - resources/**
 afterSign: build/notarize.js
 win:
   executableName: react-ts
