--- a/packages/create-electron/playground/react/electron-builder.yml
+++ b/packages/create-electron/playground/react/electron-builder.yml
@@ -9,7 +9,7 @@ files:
   - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
 asarUnpack:
-  - resources/*
+  - resources/**
 afterSign: build/notarize.js
 win:
   executableName: react
