fix(create-electron): svelte tsconfig in TypeScript 5

--- a/packages/create-electron/template/svelte-ts/tsconfig.json
+++ b/packages/create-electron/template/svelte-ts/tsconfig.json
@@ -7,8 +7,7 @@
     "src/preload/*.d.ts"
   ],
   "compilerOptions": {
-    "importsNotUsedAsValues": "error",
-    "preserveValueImports": true,
+    "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
     "strict": false,
     "allowJs": true,
