--- a/packages/create-electron/playground/svelte/.prettierrc.yaml
+++ b/packages/create-electron/playground/svelte/.prettierrc.yaml
@@ -2,3 +2,9 @@ singleQuote: true
 semi: false
 printWidth: 100
 trailingComma: none
+plugins:
+  - prettier-plugin-svelte
+overrides:
+  - files: '*.svelte'
+    options:
+      parser: svelte
