--- a/packages/create-electron/playground/vanilla/electron-builder.yml
+++ b/packages/create-electron/playground/vanilla/electron-builder.yml
@@ -7,7 +7,6 @@ files:
   - '!{.eslintignore,.eslintrc.js,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
 asarUnpack:
   - resources/**
-afterSign: build/notarize.js
 win:
   executableName: vanilla
 nsis:
@@ -22,6 +21,7 @@ mac:
     - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
     - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
     - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
+  notarize: false
 dmg:
   artifactName: ${name}-${version}.${ext}
 linux:
