--- a/packages/create-electron/playground/vanilla/package.json
+++ b/packages/create-electron/playground/vanilla/package.json
@@ -16,15 +16,14 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^1.0.2"
+    "@electron-toolkit/utils": "^2.0.0"
   },
   "devDependencies": {
-    "@electron/notarize": "^1.2.3",
-    "electron": "^24.6.2",
-    "electron-builder": "^23.6.0",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "@electron-toolkit/eslint-config": "^1.0.1",
+    "@electron-toolkit/eslint-config-prettier": "^1.0.1",
+    "electron": "^25.6.0",
+    "electron-builder": "^24.6.3",
+    "eslint": "^8.47.0",
+    "prettier": "^3.0.2"
   }
 }
