--- a/packages/create-monorepo/playground/monorepo-tsx/package.json
+++ b/packages/create-monorepo/playground/monorepo-tsx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo",
+  "name": "monorepo-tsx",
   "version": "1.0.0",
   "private": true,
   "description": "A monorepo starter",
@@ -8,15 +8,18 @@
     "format": "prettier --write .",
     "lint": "eslint --ext .ts packages/*/src/**",
     "typecheck": "tsc --noEmit",
+    "dev:foo": "pnpm run -C packages/foo dev",
     "build:foo": "pnpm run -C packages/foo build"
   },
   "devDependencies": {
     "@types/node": "^18.18.14",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "esno": "^4.0.0",
     "prettier": "^3.1.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
