--- a/packages/create-electron/playground/vanilla/package.json
+++ b/packages/create-electron/playground/vanilla/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Electron application",
   "main": "./src/main.js",
   "author": "example.com",
-  "homepage": "https://www.electronjs.org",
+  "homepage": "https://electron-vite.org",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --ext .js .",
@@ -15,15 +15,15 @@
     "build:linux": "electron-builder --linux --config"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^2.0.0"
+    "@electron-toolkit/preload": "^3.0.0",
+    "@electron-toolkit/utils": "^3.0.0"
   },
   "devDependencies": {
-    "@electron-toolkit/eslint-config": "^1.0.1",
-    "@electron-toolkit/eslint-config-prettier": "^1.0.1",
-    "electron": "^25.6.0",
-    "electron-builder": "^24.6.3",
-    "eslint": "^8.47.0",
-    "prettier": "^3.0.2"
+    "@electron-toolkit/eslint-config": "^1.0.2",
+    "@electron-toolkit/eslint-config-prettier": "^2.0.0",
+    "electron": "^28.1.1",
+    "electron-builder": "^24.9.1",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1"
   }
 }
