refactor(create-node-lib): config file

--- a/packages/create-node-lib/template/rollup/package.json
+++ b/packages/create-node-lib/template/rollup/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts src/**",
     "typecheck": "tsc --noEmit",
     "dev": "esno -r dotenv/config src/index.ts",
-    "build": "npm run lint && rollup -c rollup.config.mjs",
+    "build": "npm run lint && rollup -c rollup.config.ts --configPlugin typescript",
     "test": "vitest run"
   },
   "devDependencies": {
