--- a/packages/create-electron/template/vanilla/package.json
+++ b/packages/create-electron/template/vanilla/package.json
@@ -2,7 +2,7 @@
   "name": "vanilla",
   "version": "1.0.0",
   "description": "A minimal Electron application with JavaScript",
-  "main": "./out/main/index.js",
+  "main": "./out/main/main.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
   "scripts": {
