refactor(create-monorepo): use rollup bundler and bump deps

--- a/packages/create-monorepo/template/base/packages/foo/package.json
+++ b/packages/create-monorepo/template/base/packages/foo/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "dev": "esno -r dotenv/config src/index.ts",
-    "build": "unbuild",
+    "build": "rollup -c rollup.config.ts --configPlugin typescript",
     "test": "vitest run"
   }
 }
