--- a/packages/create-monorepo/template/base/package.json
+++ b/packages/create-monorepo/template/base/package.json
@@ -13,18 +13,21 @@
     "test:foo": "pnpm run -C packages/foo test"
   },
   "devDependencies": {
-    "@types/node": "^18.18.14",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "esno": "^4.0.0",
-    "prettier": "^3.1.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.2",
-    "vitest": "^0.34.6",
-    "unbuild": "^2.0.0"
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^18.19.28",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "esno": "^4.7.0",
+    "prettier": "^3.2.5",
+    "rollup": "^4.13.2",
+    "rollup-plugin-dts": "^6.1.0",
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   }
 }
