chore(create-monorepo): update playground

--- a/packages/create-monorepo/playground/monorepo-tsx/packages/foo/package.json
+++ b/packages/create-monorepo/playground/monorepo-tsx/packages/foo/package.json
@@ -17,6 +17,6 @@
   ],
   "scripts": {
     "dev": "esno -r dotenv/config src/index.ts",
-    "build": "unbuild"
+    "build": "rollup -c rollup.config.ts --configPlugin typescript"
   }
 }
