--- a/packages/create-monorepo/playground/monorepo/packages/foo/package.json
+++ b/packages/create-monorepo/playground/monorepo/packages/foo/package.json
@@ -16,6 +16,6 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild"
+    "build": "rollup -c rollup.config.ts --configPlugin typescript"
   }
 }
