perf(create-node-lib): use rollup-plugin-rm for rollup template

--- a/packages/create-node-lib/template/rollup/package.json
+++ b/packages/create-node-lib/template/rollup/package.json
@@ -38,6 +38,7 @@
     "prettier": "^3.2.5",
     "rollup": "^4.13.0",
     "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-rm": "^1.0.2",
     "typescript": "^5.4.3",
     "vitest": "^1.4.0"
   }
