fix(create-electron): tsconfig not work in svelte ts template

--- a/packages/create-electron/template/svelte-ts/tsconfig.json
+++ b/packages/create-electron/template/svelte-ts/tsconfig.json
@@ -1,18 +1,4 @@
 {
-  "extends": "@electron-toolkit/tsconfig/tsconfig.json",
-  "include": [
-    "src/renderer/src/env.d.ts",
-    "src/renderer/src/**/*",
-    "src/renderer/src/**/*.svelte",
-    "src/preload/*.d.ts"
-  ],
-  "compilerOptions": {
-    "verbatimModuleSyntax": true,
-    "useDefineForClassFields": true,
-    "strict": false,
-    "allowJs": true,
-    "checkJs": true,
-    "lib": ["ESNext", "DOM", "DOM.Iterable"]
-  },
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "files": [],
+  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
 }
