--- a/packages/create-electron/playground/svelte-ts/package.json
+++ b/packages/create-electron/playground/svelte-ts/package.json
@@ -29,17 +29,23 @@
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@types/node": "^22.13.13",
-    "electron": "^35.0.3",
+    "@types/node": "^22.14.1",
+    "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
-    "eslint": "^9.23.0",
-    "eslint-plugin-svelte": "^2.46.1",
+    "eslint": "^9.24.0",
+    "eslint-plugin-svelte": "^3.5.1",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
-    "svelte": "^5.25.3",
+    "svelte": "^5.26.1",
     "svelte-check": "^4.1.5",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.3"
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "electron",
+      "esbuild"
+    ]
   }
 }
