--- a/packages/create-electron/playground/vue/package.json
+++ b/packages/create-electron/playground/vue/package.json
@@ -25,13 +25,20 @@
     "@electron-toolkit/eslint-config": "^2.0.0",
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
-    "electron": "^35.0.3",
+    "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
-    "eslint": "^9.23.0",
-    "eslint-plugin-vue": "^9.33.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-vue": "^10.0.0",
     "prettier": "^3.5.3",
-    "vite": "^6.2.3",
-    "vue": "^3.5.13"
+    "vite": "^6.2.6",
+    "vue": "^3.5.13",
+    "vue-eslint-parser": "^10.1.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "electron",
+      "esbuild"
+    ]
   }
 }
