--- a/packages/create-docs/playground/docs-i18n-ts/package.json
+++ b/packages/create-docs/playground/docs-i18n-ts/package.json
@@ -9,8 +9,9 @@
     "serve": "vitepress serve"
   },
   "devDependencies": {
-    "@types/node": "^18.18.10",
-    "vitepress": "1.0.0-rc.29"
+    "@types/node": "^22.14.1",
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.4.1"
   },
   "pnpm": {
     "peerDependencyRules": {
