--- a/packages/create-docs/playground/docs/package.json
+++ b/packages/create-docs/playground/docs/package.json
@@ -9,7 +9,8 @@
     "serve": "vitepress serve"
   },
   "devDependencies": {
-    "vitepress": "1.0.0-rc.29"
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.4.1"
   },
   "pnpm": {
     "peerDependencyRules": {
