feat(create-monorepo): set the type field to 'module'

--- a/packages/create-monorepo/template/base/package.json
+++ b/packages/create-monorepo/template/base/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "A monorepo starter",
+  "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "format": "prettier --write --cache .",
