--- a/packages/create-monorepo/playground/monorepo-tsx/package.json
+++ b/packages/create-monorepo/playground/monorepo-tsx/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "A monorepo starter",
+  "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "format": "prettier --write --cache .",
@@ -12,13 +13,13 @@
     "build:foo": "pnpm run -C packages/foo build"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
+    "@eslint/js": "^9.25.0",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.14.1",
     "dotenv": "^16.5.0",
-    "eslint": "^9.24.0",
+    "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "esno": "^4.8.0",
@@ -28,6 +29,6 @@
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-rm": "^1.0.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.1"
+    "typescript-eslint": "^8.30.1"
   }
 }
