--- a/packages/create-node-lib/playground/rollup-vitest/package.json
+++ b/packages/create-node-lib/playground/rollup-vitest/package.json
@@ -20,25 +20,26 @@
     "format": "prettier --write .",
     "lint": "eslint --cache .",
     "typecheck": "tsc --noEmit",
-    "build": "npm run lint && rollup -c rollup.config.ts --configPlugin typescript",
+    "build": "npm run typecheck && rollup -c rollup.config.ts --configPlugin typescript",
     "test": "vitest run"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
+    "@eslint/js": "^9.36.0",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@types/node": "^22.13.10",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^16.0.0",
-    "prettier": "^3.5.3",
-    "rollup": "^4.36.0",
-    "rollup-plugin-dts": "^6.2.0",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/node": "^22.18.6",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2",
+    "rollup": "^4.52.0",
+    "rollup-plugin-dts": "^6.2.3",
     "rollup-plugin-rm": "^1.0.2",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
-    "vitest": "^3.0.9"
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.0",
+    "vitest": "^3.2.4"
   }
 }
