refactor(create-monorepo): use tsx instead of esno

--- a/packages/create-monorepo/template/base/packages/foo/package.json
+++ b/packages/create-monorepo/template/base/packages/foo/package.json
@@ -17,7 +17,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "esno -r dotenv/config src/index.ts",
+    "dev": "tsx --env-file=.env src/index.ts",
     "build": "rollup -c rollup.config.ts --configPlugin typescript",
     "test": "vitest run"
   }
