Enable file nesting in VS Code settings
让vscode编辑器折叠配置

--- a/packages/create-electron/template/base/.vscode/settings.json
+++ b/packages/create-electron/template/base/.vscode/settings.json
@@ -7,5 +7,11 @@
   },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "tsconfig.json": "tsconfig.*.json",
+    "electron.vite.config.ts": "*.config.ts, *.config.js, *.yml, jsconfig*",
+    "package.json": "package-lock.json, pnpm*, .yarnrc*, yarn*, .eslint*, eslint*, .oxlint*, oxlint*, .prettier*, prettier*, .editorconfig, .npmrc, bun.*"
   }
 }
